fix: multilang window indicator

--- a/docs/src/App.styl
+++ b/docs/src/App.styl
@@ -4,6 +4,7 @@
 lightTheme()
   --clr-bgMain: $bgMainLight;
   --clr-fgTitle: $titleLight;
+  --clr-fgMedium: $mediumLight;
   --clr-fgText: $textLight;
   --clr-border: $borderLight;
   --clr-bgCode: $bgCodeMainLight;
@@ -12,6 +13,7 @@ lightTheme()
 darkTheme()
   --clr-bgMain: $bgMainDark;
   --clr-fgTitle: $titleDark;
+  --clr-fgMedium: $mediumDark;
   --clr-fgText: $textDark;
   --clr-border: $borderDark;
   --clr-bgCode: $bgCodeMainDark;
