--- a/docs/src/vars.styl
+++ b/docs/src/vars.styl
@@ -50,12 +50,14 @@ $bgMainLight = white;
 $bgSecondaryLight = #f2f5f6;
 $titleLight = #050505;
 $textLight = #313131;
+$mediumLight = #cac1a9;
 $borderLight = #e0e4e5;
 
 $bgMainDark = hsl(195deg 14% 15%);
 $bgSecondaryDark = hsl(195deg 18% 10%);
 $titleDark = #f8f4e8;
 $textDark = #f5f1e5;
+$mediumDark = #787878;
 $borderDark = #41403c;
 
 // $bgCodeLight = #fffefd;
