--- a/docs/src/uikit/Button.styl
+++ b/docs/src/uikit/Button.styl
@@ -14,6 +14,7 @@
   font-weight: 400;
   cursor: pointer;
   transition: all 150ms ease-in;
+  text-decoration: none;
   svg
     width: 1em;
     height: 1em;
