feat: redesign docs (#11)
* color changes
* redesign vis
* refactor: styles
* refactor: style variables
* feat: generate syntax highlighting
* feat: add syntax highlight generator
* feat: menu
* fix: refactor Bash
* feat: line numbers & bash signs

--- a/vis/src/components/Cluster/FileListing.scss
+++ b/vis/src/components/Cluster/FileListing.scss
@@ -1,7 +1,7 @@
 .files {
   grid-area: files;
   max-height: 400px;
-  overflow-y: scroll;
+  // overflow-y: scroll;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
@@ -14,8 +14,17 @@
   .file {
     cursor: pointer;
 
+    display: flex;
+    flex-direction: row;
+    gap: 1ch;
+
+    .path {
+      flex: 1;
+    }
+
     &:hover {
       background-color: rgb(0, 0, 0, 0.1);
     }
+
   }
 }
