--- a/vis/src/components/Cluster/BaseCluster.scss
+++ b/vis/src/components/Cluster/BaseCluster.scss
@@ -5,27 +5,31 @@
 .pre {
   font-weight: 600;
   line-height: 2;
-  box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
+  // box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
 }
 
 .cluster {
   display: grid;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  padding: 2rem;
+  // box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  padding: 2em;
   border-radius: 8px;
-  background-color: var(--clr-card-bg);
-  column-gap: 2rem;
-  row-gap: 1rem;
+  border: 1px solid var(--clr-bgBorder);
+  background-color: var(--clr-bgSecondary);
+  color: var(--clr-fgText);
+  column-gap: 2em;
+  row-gap: 1em;
   grid-template-areas:
     "title title"
     "properties files"
     "properties files"
   ;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: minmax(max-content, 28ch) 1fr;
   position: relative;
 
   h3 {
-    color: var(--clr-card-title-fg);
+    color: var(--clr-fgText);
+    font-weight: 400;
+    font-size: 1rem;
   }
 
   .title {
@@ -40,12 +44,18 @@
     ;
     place-content: start;
     place-items: start;
-    /* color: rgb(63, 130, 63); */
     h2 {
+      color: var(--clr-fgTitle);
       grid-area: title;
       display: flex;
       line-height: 2;
       align-self: center;
+    }
+
+    .type-icon {
+      grid-area: icon;
+      font-size: 2em;
+      font-weight: 800;
     }
   }
 
@@ -58,9 +68,11 @@
     .pre {
       /* background-color: #f0fafa; */
       /* background-image: linear-gradient(to left bottom, #f0fafa, #ecf9f9, #e9f7f7, #e5f6f6, #e1f4f4); */
-      background-color: var(--clr-code-bg);
-      color: var(--clr-code-fg);
-      padding: 0.5rem 1rem;
+      background-color: var(--clr-bgMain);
+      color: var(--clr-fgText);
+      padding: 0.5em 1em;
+      border: 1px solid var(--clr-bgBorder);
+      border-radius: 4px;
     }
 
     .property.key {
