--- a/docs/src/uikit/UiKitApp.styl
+++ b/docs/src/uikit/UiKitApp.styl
@@ -34,9 +34,10 @@ main
     lightTheme();
   &.dark
     darkTheme();
-  flexColumn($gapLarge)
-  justify-content: flex-start;
-  align-items: center;
+  flexColumn()
+  min-height: 100vh;
+  // justify-content: flex-start;
+  // align-items: center;
   background-color: var(--clr-bgMain);
   color: var(--clr-fgText);
   header
