--- a/vis/src/components/Search/Search.scss
+++ b/vis/src/components/Search/Search.scss
@@ -1,7 +1,8 @@
 .search {
   flex: 1;
   display: flex;
-  padding: 0rem 1rem 1rem 2rem;
+  padding: 0;
+  max-width: 1200px;
 
   input {
     flex: 1;
