feat: style changes

--- a/docs/src/App.styl
+++ b/docs/src/App.styl
@@ -59,6 +59,7 @@ main
     padding: $gapMedium;
     width: 80vw;
     font-size: 16px;
+    background-color: var(--clr-bgSecondary);
     @media screen and (max-width: $breakSnippetsColumn)
       width: 100vw;
       padding: 0 1rem;
