feat: responsive cards & menu

--- a/vis/src/components/Cluster/BaseCluster.scss
+++ b/vis/src/components/Cluster/BaseCluster.scss
@@ -18,13 +18,53 @@
   color: var(--clr-fgText);
   column-gap: 2em;
   row-gap: 1em;
+  overflow-x: scroll;
   grid-template-areas:
     "title title"
+    "names names"
     "properties files"
     "properties files"
   ;
   grid-template-columns: minmax(max-content, 28ch) 1fr;
   position: relative;
+
+  .names-container {
+    align-items: center;
+  }
+
+  @media screen and (max-width: 1024px) {
+    grid-template-areas:
+      "title title"
+      "properties names"
+      "files files"
+    ;
+    grid-template-columns: max-content 1fr;
+    .properties {
+      max-width: 28ch;
+    }
+    .names-container {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  }
+  @media screen and (max-width: 660px) {
+    grid-template-areas:
+      "title"
+      "names"
+      "properties"
+      "files"
+    ;
+    grid-template-columns: 1fr;
+    .names-container {
+      flex-direction: row;
+    }
+  }
+
+  @media screen and (max-width: 520px) {
+    .names-container {
+      flex-direction: column;
+    }
+  }
 
   h3 {
     color: var(--clr-fgText);
@@ -40,7 +80,6 @@
     grid-template-columns: 5ch 1fr;
     grid-template-areas:
       "icon title"
-      "also also"
     ;
     place-content: start;
     place-items: start;
@@ -57,6 +96,10 @@
       font-size: 2em;
       font-weight: 800;
     }
+  }
+
+  .names-container {
+    grid-area: names;
   }
 
   .properties {
