--- a/vis/src/App.scss
+++ b/vis/src/App.scss
@@ -73,9 +73,9 @@ main {
     justify-self: end;
     height: 100vh;
     z-index: var(--z-overlay);
-    transition: transform 250ms ease-in-out;
+
     &-hidden {
-      transform: translateX(120%);
+      transform: translateX(100%);
     }
     &-visible {
       transform: translateX(0);
@@ -92,13 +92,31 @@ main {
       grid-template-columns: 1fr;
     }
     .filters {
-      flex-direction: row;
+      // flex-direction: row;
     }
   }
 
-  @media screen and (max-width: 630px) {
+  @media screen and (max-height: 800px) {
     .filters {
-      flex-direction: column;
+      max-height: 100vh;
+      &-hidden {
+        transform: translateX(100%);
+      }
+      &-visible {
+        transform: translateX(0);
+      }
+    }
+    @media screen and (min-width: 620px) {
+      .filters {
+        flex-direction: row;
+        height: unset;
+        &-hidden {
+          transform: translateY(-100%);
+        }
+        &-visible {
+          transform: translateY(0);
+        }
+      }
     }
   }
 
