feat: menu hover style

--- a/docs/src/components/Logo.styl
+++ b/docs/src/components/Logo.styl
@@ -29,6 +29,8 @@ $logoSize = 48px;
     // background-color: darken(bgWindowHeader, 20);
     background-color: $accent;
     // box-shadow: $boxShadow;
+    &:hover
+      background-color: lighten($accent, 3);
   &-title
     color: $accent;
     font-weight: 600;
