refactor: ControlsList & Control

--- a/vis/src/_vars.scss
+++ b/vis/src/_vars.scss
@@ -2,3 +2,5 @@ $codeKeyLight: rgb(54, 54, 156);
 $codeValueLight: rgb(63, 130, 63);
 $codeKeyDark: #77B1C2;
 $codeValueDark: #FEB76E;
+
+$accent: hsl(195deg 88% 33%);
