--- a/docs/src/uikit/TopBar.styl
+++ b/docs/src/uikit/TopBar.styl
@@ -12,7 +12,6 @@
     flexRow();
     width: 100vw;
     max-width: 970px;
-    align-items: start;
     justify-content: space-between;
     padding-right: 1em;
     @media screen and (max-width: $breakHeaderMenu)
@@ -23,5 +22,5 @@
       grid-area: header;
       color: white;
       display: flex;
-      justify-content: flex-end;
-      justify-self: start;
+      justify-content: flex-start;
+      align-items: flex-start;
