--- a/vis/src/App.scss
+++ b/vis/src/App.scss
@@ -62,6 +62,9 @@ main {
         .topbar-header {
           position: unset;
         }
+        & {
+          padding-right: calc((100vw - 1200px) / 2);
+        }
         .logo-icon {
           border-bottom-left-radius: 12px;
           border-bottom-right-radius: 12px;
@@ -71,6 +74,16 @@ main {
         .logo-icon {
           border-bottom-left-radius: 0px;
           border-bottom-right-radius: 12px;
+        }
+      }
+      @media screen and (max-width: 1260px) {
+        & {
+          padding-right: 64px;
+        }
+      }
+      @media screen and (max-width: 560px) {
+        & {
+          padding-right: 0;
         }
       }
     }
