--- a/vis/src/components/Cluster/TypeIcon.scss
+++ b/vis/src/components/Cluster/TypeIcon.scss
@@ -1,6 +1,6 @@
 .type-icon {
   position: relative;
-  font-weight: 800;
+  // font-weight: 800;
   color: var(--clr-bgaa-400);
   cursor: help;
   transition: color 150ms ease-in;
@@ -9,23 +9,23 @@
     color: var(--clr-bgaa-900);
   }
 
-  .tooltip {
-    position: absolute;
-    color: white;
-    bottom: 1.25rem;
-    left: .5rem;
-    background-color: gray;
-    font-size: 0.75rem;
-    padding: .25rem .5rem;
-    border-radius: 4px;
-    // opacity: 0;
-    // display: none;
-    visibility: hidden;
+  // .tooltip {
+  //   position: absolute;
+  //   color: white;
+  //   bottom: 1.25rem;
+  //   left: .5rem;
+  //   background-color: gray;
+  //   font-size: 0.75rem;
+  //   padding: .25rem .5rem;
+  //   border-radius: 4px;
+  //   // opacity: 0;
+  //   // display: none;
+  //   visibility: hidden;
   
-    &.visible {
-      // z-index: 10;
-      // opacity: 1;
-      visibility: visible;
-    }
-  }
+  //   &.visible {
+  //     // z-index: 10;
+  //     // opacity: 1;
+  //     visibility: visible;
+  //   }
+  // }
 }
