--- a/vis/src/components/Filters/Filters.scss
+++ b/vis/src/components/Filters/Filters.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   max-height: 100vh;
   overflow-y: scroll;
+  overflow-x: hidden;
   padding: 1rem;
   gap: 2rem;
   background-color: var(--clr-bgMain);
