--- a/vis/src/App.scss
+++ b/vis/src/App.scss
@@ -30,6 +30,8 @@ main {
   &.dark {
     @include darkTheme();
   }
+  position: relative;
+  overflow-x: scroll;
   background-color: var(--clr-bgSecondary);
   .topbar-container {
     .strip {
