--- a/vis/src/components/Filters/Filters.scss
+++ b/vis/src/components/Filters/Filters.scss
@@ -70,6 +70,7 @@
       font-weight: 300;
       color: var(--clr-fgText);
       display: flex;
+      gap: .5rem;
       flex-direction: row;
       align-items: center;  
     }
