--- a/vis/src/hooks/useTooltip/Tooltip.scss
+++ b/vis/src/hooks/useTooltip/Tooltip.scss
@@ -1,3 +1,6 @@
+.flex {
+  display: flex;
+}
   .content {
     position: fixed;
     pointer-events: none;
@@ -6,20 +9,48 @@
     // transform: translateX(-100%);
     // display: inline-block;
 
+    max-width: 320px;
+    width: 100%;
+
+    display: block;
+    // color: white;
+    // background-color: gray;
+    // font-size: 0.75rem;
+    // padding: .25rem .5rem;
+    // border-radius: 4px;
+    opacity: 0;
+    // display: none;
+
+    transition: opacity 150ms 100ms ease-in, transform 150ms 50ms ease-in;
+    transform-origin: top center;
+    
+    &--visible {
+      // z-index: 10;
+      opacity: 1;
+      transform: scale(1);
+      // visibility: visible;
+    }
+    &--invisible {
+      opacity: 0;
+      transform: scale(1);
+      // visibility: hidden;
+    }
+  }
+
+  .tooltip-content {
+    display: inline-block;
     color: white;
     background-color: gray;
     font-size: 0.75rem;
     padding: .25rem .5rem;
     border-radius: 4px;
-    // opacity: 0;
-    // display: none;
-    
-    &--visible {
-      // z-index: 10;
-      // opacity: 1;
-      visibility: visible;
-    }
-    &--invisible {
-      visibility: hidden;
-    }
+  }
+
+  .content-tooltip {
+    display: inline-block;
+    color: white;
+    background-color: gray;
+    font-size: 0.75rem;
+    padding: .25rem .5rem;
+    border-radius: 4px;
   }
