feat: describe search criteria

--- a/vis/src/hooks/useTooltip/Tooltip.scss
+++ b/vis/src/hooks/useTooltip/Tooltip.scss
@@ -1,6 +1,10 @@
 .flex {
   display: flex;
 }
+
+.tooltip {
+  display: inline-flex;
+}
   .content {
     position: fixed;
     pointer-events: none;
