feat: describe search results, add report info

--- a/docs/src/uikit/UiKitApp.styl
+++ b/docs/src/uikit/UiKitApp.styl
@@ -7,6 +7,7 @@ lightTheme()
   --clr-border: $borderLight;
   --clr-fgText: $textLight;
   --clr-fgTitle: $titleLight;
+  --clr-fgSecondary: $fgSecondaryLight;
 
 darkTheme()
   --clr-bgMain: $bgMainDark;
@@ -14,6 +15,7 @@ darkTheme()
   --clr-border: $borderDark;
   --clr-fgText: $textDark;
   --clr-fgTitle: $titleDark;
+  --clr-fgSecondary: $fgSecondaryDark;
 
 *
   margin: 0;
