--- a/docs/src/vars.styl
+++ b/docs/src/vars.styl
@@ -56,6 +56,7 @@ $bgSecondaryLight = hsl(195deg 20% 98%);
 // $bgSecondaryLight = white;
 $titleLight = #050505;
 $textLight = #313131;
+$fgSecondaryLight = #91918e;
 $mediumLight = #cac1a9;
 $borderLight = #e0e4e5;
 
@@ -63,6 +64,7 @@ $bgMainDark = hsl(195deg 14% 15%);
 $bgSecondaryDark = hsl(195deg 18% 10%);
 $titleDark = #f8f4e8;
 $textDark = #f5f1e5;
+$fgSecondaryDark = #787878;
 $mediumDark = #787878;
 $borderDark = #41403c;
 
