--- a/vis/src/components/Cluster/BaseCluster.scss
+++ b/vis/src/components/Cluster/BaseCluster.scss
@@ -18,7 +18,7 @@
   color: var(--clr-fgText);
   column-gap: 2em;
   row-gap: 1em;
-  overflow-x: scroll;
+  // overflow-x: scroll;
   grid-template-areas:
     "title title"
     "names names"
