--- a/vis/src/components/Cluster/FileListing.scss
+++ b/vis/src/components/Cluster/FileListing.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  overflow-x: scroll;
+  overflow: scroll;
 
   pre {
     display: flex;
