style: change dark colors

--- a/vis/src/index.scss
+++ b/vis/src/index.scss
@@ -50,7 +50,7 @@
   --clr-btn-primary-fg: var(--clr-bgfg-900);
 
   --clr-bg: var(--clr-bgna-600);
-  --clr-fg: var(--clr-bgfg-800);
+  // --clr-fg: var(--clr-bgfg-800);
   --clr-card-bg: hsl(195deg 18% 10%);
   --clr-card-bg-border: hsl(185deg 8% 90%);
   --clr-card-fg: var(--clr-bgfg-900);
