--- a/vis/src/components/Listing/Listing.scss
+++ b/vis/src/components/Listing/Listing.scss
@@ -18,11 +18,11 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: .5ch;
+    gap: .75ch;
   }
 }
 
 .strong {
   font-weight: 500;
-  color: var(--clr-fg);
+  color: var(--clr-fgText);
 }
