feat: show code snippets for duplicates

--- a/docs/src/components/Landing.styl
+++ b/docs/src/components/Landing.styl
@@ -19,6 +19,7 @@ darkTheme()
   min-height: 100vh;
   align-items: center;
   background-color: var(--clr-bgLanding);
+  border-top: 1px solid var(--clr-border);
   border-bottom: 1px solid var(--clr-border);
   color: var(--clr-fgLanding);
   &.light
