--- a/vis/src/components/Cluster/BaseCluster.scss
+++ b/vis/src/components/Cluster/BaseCluster.scss
@@ -18,15 +18,13 @@
   color: var(--clr-fgText);
   column-gap: 2em;
   row-gap: 1em;
-  // overflow-x: scroll;
   grid-template-areas:
     "title title"
     "names names"
     "files snippet"
     "files snippet"
   ;
-  grid-template-columns: minmax(max-content, 28ch) 1fr;
-  position: relative;
+  grid-template-columns: 30ch 1fr;
 
   .names-container {
     grid-area: names;
@@ -41,7 +39,7 @@
     grid-area: snippet;
   }
 
-  .files {
+  .files, .explorer {
     grid-area: files;
   }
 
