--- a/vis/src/App.scss
+++ b/vis/src/App.scss
@@ -9,6 +9,24 @@
   --clr-codeValue: #{$codeValueDark};
 }
 
+:root {
+  color-scheme: dark;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: $accent;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: darken($accent, 10%);
+}
+
 #app {
   min-height: 100vh;
   background-color: var(--clr-bg);
@@ -31,8 +49,8 @@ main {
     @include darkTheme();
   }
   position: relative;
-  overflow-x: scroll;
-  background-color: var(--clr-bgSecondary);
+  background-color: var(--clr-bgMain);
+
   .topbar-container {
     .strip {
       position: fixed;
@@ -98,11 +116,13 @@ main {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr max-content;
+  background-color: var(--clr-bgSecondary);
+  border-top: 1px solid var(--clr-border);
   justify-items: center;
   flex: 1;
 
   .filters {
-    position: absolute;
+    position: fixed;
     top: 0;
     justify-self: end;
     height: 100vh;
@@ -164,7 +184,7 @@ main {
 main {
   .topbar-container {
     .topbar {
-      width: 100vw;
+      width: 100%;
       // max-width: 1200px;
       min-width: 320px;
     }
