--- a/vis/src/components/Search/Search.scss
+++ b/vis/src/components/Search/Search.scss
@@ -9,19 +9,12 @@
 
   input {
     flex: 1;
-    background: none;
-    // background-color: hsla(185, 30%, 90%);
-    border: 0px;
-    // border-radius: 8px;
+    border: none;
+    background-color: transparent;
     color: var(--clr-fgText);
     font-family: monospace;
     font-size: 1.2rem;
     padding: 1rem 1rem;
-    border: 1px solid var(--clr-border);
-    border-top: none;
-    border-left: none;
-    border-bottom-right-radius: 12px;
-    background-color: var(--clr-bgMain);
     transition: background-color 150ms ease-in;
     @include focusable($accent);
     
@@ -36,11 +29,8 @@
   }
 
   button {
-    border: 1px solid var(--clr-border);
-    border-radius: 0;
-    border-bottom-left-radius: 12px;
-    border-right: none;
-    border-top: none;
+    border: none;
+    background-color: transparent;
     padding: 0.6rem 1.2rem;
     transition: background-color 150ms ease-in;
 
