--- a/docs/src/App.styl
+++ b/docs/src/App.styl
@@ -27,6 +27,20 @@ darkTheme()
 :root
   font-size: 16px;
 
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: $accent;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: darken($accent, 10%);
+}
+
 body
   min-height: 100vh;
   font-family: $fontRegular;
@@ -48,7 +62,7 @@ main
   .window
     background-color: var(--clr-bgCode);
   header
-    width: 100vw;
+    width: 100%;
     flexColumn($gapLarge);
     justify-content: center;
     align-items: center;
@@ -65,12 +79,12 @@ main
     font-size: 16px;
     background-color: var(--clr-bgSecondary);
     @media screen and (max-width: $breakSnippetsColumn)
-      width: 100vw;
+      width: 100%;
       padding: 0 1rem;
       max-width: unset;
     &.bleed
-      max-width: 100vw;
-      width: 100vw;
+      max-width: 100%;
+      width: 100%;
       margin: 0;
       padding: 0;
     h2 
