--- a/docs/src/uikit/TopBar.styl
+++ b/docs/src/uikit/TopBar.styl
@@ -5,12 +5,12 @@
   flexColumn();
   align-items: center;
   .strip
-    width: 100vw;
+    width: 100%;
     height: 4px;
     background-color: $accent;
   .topbar
     flexRow();
-    width: 100vw;
+    width: 100%;
     max-width: 970px;
     justify-content: space-between;
     padding-right: 1em;
