--- a/vis/src/components/Duplicate/Duplicate.scss
+++ b/vis/src/components/Duplicate/Duplicate.scss
@@ -8,7 +8,7 @@
   // box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
 }
 
-.cluster {
+.duplicate {
   display: grid;
   // box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   padding: 2em;
