feat: show line numbers in snippets

--- a/docs/src/components/Code.styl
+++ b/docs/src/components/Code.styl
@@ -11,4 +11,8 @@
   padding: $borderRadius .75em $borderRadius 1em;
   background-color: unset;
   box-shadow: none;
+  display: flex;
+  flex-direction: column;
   white-space: break-spaces;
+  span
+    min-height: 1em;
