--- a/vis/src/components/Duplicate/Duplicate.scss
+++ b/vis/src/components/Duplicate/Duplicate.scss
@@ -49,7 +49,7 @@
       "snippet names"
       "files files"
     ;
-    grid-template-columns: max-content 1fr;
+    grid-template-columns: auto 1fr;
     .properties {
       max-width: 28ch;
     }
