--- a/docs/src/uikit/TopBar.styl
+++ b/docs/src/uikit/TopBar.styl
@@ -4,13 +4,14 @@
 .topbar-container
   flexColumn();
   align-items: center;
+  width: 100%;
   .strip
-    width: 100vw;
+    width: 100%;
     height: 4px;
     background-color: $accent;
   .topbar
     flexRow();
-    width: 100vw;
+    width: 100%;
     max-width: 970px;
     justify-content: space-between;
     padding-right: 1em;
