--- a/vis/src/components/Duplicate/Title.scss
+++ b/vis/src/components/Duplicate/Title.scss
@@ -1,24 +1,29 @@
 .title {
   display: grid;
-  flex-direction: row;
-  column-gap: 2rem;
-  grid-template-columns: 5ch 1fr;
-  grid-template-areas:
-    "icon title"
-  ;
-  place-content: start;
-  place-items: start;
+  column-gap: 1em;
+  grid-template-columns: 5ch max-content max-content;
+  align-items: center;
   h2 {
     color: var(--clr-fgTitle);
-    grid-area: title;
     display: flex;
     line-height: 2;
     align-self: center;
   }
 
   .type-icon {
-    grid-area: icon;
     font-size: 2em;
     font-weight: 800;
+  }
+
+  .badge {
+    padding: 4px;
+    border-radius: 4px;
+    line-height: 1;
+    background-color: hsl(195, 65%, 95%);
+    color: hsl(195, 25%, 30%);
+    border: 1px solid currentColor;
+    font-weight: bolder;
+    font-size: x-small;
+    text-transform: uppercase; 
   }
 }
