fix: vis snippet line numbers style

--- a/vis/src/App.scss
+++ b/vis/src/App.scss
@@ -3,10 +3,12 @@
 @mixin lightTheme() {
   --clr-codeKey: #{$codeKeyLight};
   --clr-codeValue: #{$codeValueLight};
+  --clr-codeCommentsFg: #{$grayLight};
 }
 @mixin darkTheme() {
   --clr-codeKey: #{$codeKeyDark};
   --clr-codeValue: #{$codeValueDark};
+  --clr-codeCommentsFg: #{$gray};
 }
 
 :root {
